Small CSS fixes for Bryan's mirador
Changed overflow to hidden for top right 3 icons, it was giving a scroll bar with no scroll.
Changed overflow-x to inital for bottom image scroller, same issue as above. This might need to be reverted if the scrollbar fails to appear for many images.

--- a/css/mirador_custom.scss
+++ b/css/mirador_custom.scss
@@ -10,8 +10,6 @@ body {
 	width:100%;
 }
 
-
-
 .mirador-reader {
 	width: 100%;
 	min-height: 1000px;
@@ -19,6 +17,10 @@ body {
 
 	.content-container {
 		margin-top:40px;
+	
+		.panel-thumbnail-view {
+			overflow-x:initial;
+		}
 	}
 
 	.window-manifest-title {
@@ -26,6 +28,10 @@ body {
 		padding: 0;
 		margin: 0;
 		margin-left: 35px;
+		overflow:initial;
+	}
+	.manifest-info {
+		overflow:hidden;
 	}
 	.select-metadata  {
 		h3 {
